--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-web = "4"
+sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
+serde = { version = "1.0", features = ["derive"] }
+jsonwebtoken = "9"
