--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ actix-web = "4"
 sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
 serde = { version = "1.0", features = ["derive"] }
 jsonwebtoken = "9"
+chrono = "0.4"
