add redis for token blacklisting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,12 @@ sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
 serde = { version = "1.0", features = ["derive"] }
 jsonwebtoken = "9"
 chrono = "0.4"
+redis = { version ="0.29.1", features = ["tokio-comp"] }
+deadpool-redis = "0.20.0"
+dotenv = "0.15.0"
+
+[dependencies.uuid]
+version = "1.15.1"
+features = [
+    "v4",
+]
